tests/ext/valid/SetDefine_Valid_1.whiley
define pintset as {int} where |$| > 1

void System::main([string] args):
    p = {1,2}
    out.println(str(p))
